Working drag animations
Bit glitchy visually when trying to move before or after an entry. Will try to force only after as a next step, this could work more naturally

--- a/scriptorium/meson.build
+++ b/scriptorium/meson.build
@@ -54,6 +54,7 @@ blueprints = custom_target(
 
 		'views/write/page.blp',
 		'views/write/navigation.blp',
+		'views/write/navigation_item.blp',
 
 		'widgets/chapter_column.blp',
 		'widgets/scene.blp',
