--- a/scriptorium/views/meson.build
+++ b/scriptorium/views/meson.build
@@ -6,7 +6,6 @@ scriptorium_sources_views = [
 	'editor_chapters_details.py',
 	'editor_scenes.py',
 	'editor_scenes_details.py',
-	'editor_formatting.py',
 	'editor_entities.py',
 	'editor_entities_details.py',
 	'editor_overview.py',
@@ -15,3 +14,4 @@ scriptorium_sources_views = [
 install_data(scriptorium_sources_views, install_dir: moduledir / 'views')
 
 subdir('write')
+subdir('publish')
