Started work on planning

--- a/scriptorium/meson.build
+++ b/scriptorium/meson.build
@@ -48,8 +48,10 @@ blueprints = custom_target(
 		'views/editor_scenes.blp',
 		'views/editor_scenes_details.blp',
 		'views/editor_manuscript.blp',
-		'views/editor_entities.blp',
-		'views/editor_entities_details.blp',
+
+		'views/plan/page.blp',
+		'views/plan/editor_entities.blp',
+		'views/plan/editor_entities_details.blp',
 
 		'views/write/page.blp',
 		'views/write/navigation.blp',
