--- a/scriptorium/views/meson.build
+++ b/scriptorium/views/meson.build
@@ -6,12 +6,12 @@ scriptorium_sources_views = [
 	'editor_chapters_details.py',
 	'editor_scenes.py',
 	'editor_scenes_details.py',
-	'editor_entities.py',
-	'editor_entities_details.py',
 	'editor_overview.py',
 	'editor_manuscript.py',
 ]
 install_data(scriptorium_sources_views, install_dir: moduledir / 'views')
 
+subdir('plan')
 subdir('write')
 subdir('publish')
+
