Migrated more panels to the new layout

--- a/scriptorium/views/plan/meson.build
+++ b/scriptorium/views/plan/meson.build
@@ -3,5 +3,8 @@ scriptorium_sources_views = [
 	'page.py',
 	'editor_entities.py',
 	'editor_entities_details.py',
+	'editor_scenes.py',
+	'editor_scenes_details.py',
+	'editor_manuscript.py',
 ]
 install_data(scriptorium_sources_views, install_dir: moduledir / 'views' / 'plan')
