--- a/scriptorium/views/meson.build
+++ b/scriptorium/views/meson.build
@@ -1,6 +1,7 @@
 scriptorium_sources_views = [
 	'__init__.py',
 	'library.py',
+	'library_item.py',
 	'editor.py',
 ]
 install_data(scriptorium_sources_views, install_dir: moduledir / 'views')
