--- a/scriptorium/views/plan/meson.build
+++ b/scriptorium/views/plan/meson.build
@@ -8,5 +8,7 @@ scriptorium_sources_views = [
 	'editor_manuscript.py',
 	'editor_overview.py',
 	'editor_overview_item.py',
+	'editor_images.py',
+	'editor_images_item.py',
 ]
 install_data(scriptorium_sources_views, install_dir: moduledir / 'views' / 'plan')
