--- a/scriptorium/views/publish/meson.build
+++ b/scriptorium/views/publish/meson.build
@@ -1,5 +1,5 @@
 scriptorium_sources_views = [
 	'__init__.py',
-	'page.py',
+	'page.py'
 ]
 install_data(scriptorium_sources_views, install_dir: moduledir / 'views' / 'publish')
