Remove tag not allowed

--- a/data/io.github.cgueret.Scriptorium.metainfo.xml.in
+++ b/data/io.github.cgueret.Scriptorium.metainfo.xml.in
@@ -12,9 +12,9 @@
     </p>
     <p>Scriptorium features are organised around three facets:</p>
     <ul>
-      <li><b>Plan</b> the list of scenes and story elements of the manuscript.</li>
-      <li><b>Write</b> the content of the scenes with a text focused editor.</li>
-      <li><b>Publish</b> your manuscript as an epub after previewing it.</li>
+      <li>Plan the list of scenes and story elements of the manuscript.</li>
+      <li>Write the content of the scenes with a text focused editor.</li>
+      <li>Publish your manuscript as an epub after previewing it.</li>
     </ul>
     <p>In addition, some general features are:</p>
     <ul>
