Initial files added, still working on the overall UI layout

--- a/scriptorium/views/plan/meson.build
+++ b/scriptorium/views/plan/meson.build
@@ -10,5 +10,6 @@ scriptorium_sources_views = [
 	'editor_overview_item.py',
 	'editor_images.py',
 	'editor_images_item.py',
+	'editor_references_grid.py'
 ]
 install_data(scriptorium_sources_views, install_dir: moduledir / 'views' / 'plan')
